feat(core): add support for new extension-type action
This commit adds support for a new extension type called 'action'.

In addition, it provides the built-in actions:
- SystemTime
- KafkaConsumerGroupsResetOffsets